# devops2

./: .gitignore  CMakeLists.txt  Jenkinsfile  Jenkinsfile_integration  Makefile  README.md  deployment.yml  main.cpp  start_miniserve.sh
.github/workflows/: run_on_mult_archs.yml
deployment/: Dockerfile  Jenkinsfile
jenkins/: Dockerfile  Jenkinsfile  start_jenkins.sh  stop_jenkins.sh
kubernetes/: apply_all.sh  jenkins-03-deployment.yml
kubernetes_jenkins/: Dockerfile  apply_all.sh
src/: CMakeLists.txt  main.cpp
src/Calculator/: Calculator.cpp  Calculator.hpp
tests/: CMakeLists.txt  CalculatorTests.cpp
